linux/ubuntu/vendors/aws/aws-cloudformation.yaml
AWSTemplateFormatVersion: "2010-09-09"

Mappings: 
  RegionMap: 
    us-east-1: 
      "HVM64": "ami-0c34eb6163fecee19"

Parameters:
  InstanceTypeParameter:
    Type: String
    Default: t2.medium
    Description: Instance type    
    AllowedValues:
      - t2.medium
      - t2.large
      - t2.xlarge      
      - t3.medium
      - t3.large
      - t3.xlarge

  CidrBlock:
    AllowedPattern: '((\d{1,3})\.){3}\d{1,3}/\d{1,2}'
    Default: 0.0.0.0/0
    Description: VPC CIDR Block (eg 10.0.0.0/16)
    Type: String

  SSHKey:
    Type: AWS::EC2::KeyPair::KeyName
    Description: key pair to ssh into EC2 instance
    
Resources:
  ## Security group for NirvaShare services enabling port 8080 and 8081
  ## Port 22 for console access
  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: NirvaShare security group
      GroupName: WebSecurityGroup     
#      VpcId: vpc-abc01234
      SecurityGroupIngress:
        -
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref CidrBlock
        -
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          CidrIp: !Ref CidrBlock
        -
          IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          CidrIp: !Ref CidrBlock
 
  ## EC2 Instance
  WebInstance:
    Type: AWS::EC2::Instance
    Properties:
      BlockDeviceMappings:
        -
          DeviceName: "/dev/sda1"
          Ebs:
            VolumeSize: 100
            VolumeType: gp2
      InstanceType:
        Ref: InstanceTypeParameter
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", HVM64]
      KeyName: !Ref SSHKey
      Monitoring: false
      SecurityGroupIds:
        - !Ref WebSecurityGroup
      UserData:
#	* Installs docker and docker-conpose community edition
#	* Installs postgres database as docker service.
#	* Sets randomized database password.
#	* Installs NirvaShare Admin Console as docker service.
#	* Sets default admin password as EC2 instance id
#	* Installs NirvaShare User application as docker service.
#
        Fn::Base64: 
          !Sub |
            #!/bin/bash            
            curl -s https://raw.githubusercontent.com/nirvashare/nirvashare/main/linux/ubuntu/vendors/aws/install_nirvashare.sh -o ns_install.sh && bash ns_install.sh && rm -f ns_install.sh
      Tags:
        -
          Key: Name
          Value: NirvaShare
